--- a/assets/stylesold/styleold.css
+++ b/assets/stylesold/styleold.css
@@ -96,7 +96,7 @@ body, html {
 
 body {
   background-color: #fff;
-  /* color: #110f10; */
+  color: #110f10;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   line-height: 2;
