--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -4396,7 +4396,7 @@ li:nth-child(4) .menu-list__item span {
   visibility: hidden;
 }
 .reveal.animated::before {
-  background: #d4af37;
+  background: #f7541b;
   animation: reveal 3s cubic-bezier(0.77, 0, 0.175, 1) both;
   z-index: 2;
 }
