--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -95,8 +95,8 @@ body, html {
 }
 
 body {
-  background-color: #fff;
-  /* color: #110f10; */
+  background-image: url(../images/pattern.jpg);
+  background-repeat:repeat;                                       
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   line-height: 2;
@@ -4389,14 +4389,14 @@ li:nth-child(4) .menu-list__item span {
   width: 100%;
 }
 .reveal::after {
-  background: #fff;
+ /*  background: #fff; */
   z-index: 1;
 }
 .touch .reveal::after, .touch .reveal::before {
   visibility: hidden;
 }
 .reveal.animated::before {
-  background: #f7541b;
+  background: #1b264f;
   animation: reveal 3s cubic-bezier(0.77, 0, 0.175, 1) both;
   z-index: 2;
 }
