--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -2552,6 +2552,19 @@ iframe {
     margin-bottom: 0;
   }
 }
+.button{
+      background-color:#e7e7e7;
+      border-radius: 12px;
+      color:black;
+      padding: 8px 24px;
+        text-align: center;
+        display: inline-block;
+        font-size: 15px;
+        border: 2px solid #000;
+        cursor: pointer;
+        overflow: visible;
+        
+    }
 
 .item-brand {
   background-color: rgba(199, 201, 209, 0.09);
@@ -3368,7 +3381,7 @@ iframe {
     - Menu
 ----------------------------------------------------------------- */
 .menu {
-  background: #110f10;
+  background: #1b254f;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: -moz-box;
