--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1175,9 +1175,9 @@ iframe {
 .hamburger__inner:before, .hamburger__inner:after {
   background-color: #110f10;
   display: block;
-  content: '';
+  content: url('/assets/icons/ham.svg');
   margin-left: -12px;
-  height: 2px;
+  height: 4px;
   width: 25px;
   position: absolute;
   top: 6px;
