--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1171,6 +1171,7 @@ iframe {
   height: 24px;
   width: 25px;
   position: relative;
+  bottom: 10px;
 }
 .hamburger__inner:before, .hamburger__inner:after {
   background-color: #110f10;
