--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -3383,7 +3383,8 @@ iframe {
     - Menu
 ----------------------------------------------------------------- */
 .menu {
-  background: #fff;
+  background-image: url(../images/pattern.png);
+  background-repeat: repeat;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: -moz-box;
