images and menu pattern and video

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -3383,7 +3383,7 @@ iframe {
     - Menu
 ----------------------------------------------------------------- */
 .menu {
-  background-image: url(../images/pattern.png);
+  background-image: url(../images/patternmenu.jpeg);
   background-repeat: repeat;
   display: -webkit-flex;
   display: -ms-flexbox;
