--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -95,7 +95,7 @@ body, html {
 }
 
 body {
-  background-image: url(../images/pattern.jpg);
+  background-image: url(../images/dynamic.png);
   background-repeat:repeat;                                       
   font-family: "Roboto", sans-serif;
   font-weight: 400;
