--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -65,7 +65,8 @@
 @import url(photoswipe.css);
 @import url(animate.css);
 @import url(videojs-skin.css);
-@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900");
+/* @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900"); */
+@import url('https://www.fontify.me/wf/1cc89de3d33c62b9e9d8cdb0afa715aa');
 @import url(../icons/fonticons.css);
 /* -----------------------------------------------------------------
     - General Styles
@@ -97,7 +98,8 @@ body, html {
 body {
   /* background-image: url(../images/dynamic.png); */
   background-repeat:repeat;                                       
-  font-family: "Roboto", sans-serif;
+  /* font-family: "Roboto", sans-serif; */
+  font-family: font86463;
   font-weight: 400;
   line-height: 2;
   -ms-overflow-style: scrollbar;
@@ -566,7 +568,7 @@ button:focus {
     - Typography
 ----------------------------------------------------------------- */
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Roboto", sans-serif;
+  font-family: font86463;
   font-weight: 400;
   line-height: 1.2;
   margin-bottom: 3.4rem;
@@ -668,7 +670,7 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 .title--subtitle {
-  font-family: "Roboto", sans-serif;
+  font-family: font86463;
 }
 @media only screen and (max-width: 580px) {
   .title--subtitle {
@@ -681,7 +683,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .title--overhead {
   color: #8d99a7;
-  font-family: "Roboto", sans-serif;
+  font-family: font86463;
   font-size: .87rem;
   font-weight: 400;
   letter-spacing: .1rem;
@@ -985,7 +987,7 @@ iframe {
   transition: all 0.3s cubic-bezier(0.72, 0.16, 0.345, 0.875);
   width: 100%;
   z-index: 1001;
-  background-color: #fff;
+  background-color: #fff; 
 }
 @media only screen and (max-width: 1500px) {
   .navbar {
@@ -2105,11 +2107,11 @@ iframe {
 .swiper-pagination-bullet {
   background: #8d99a7;
   display: block;
-  height: 6px;
+  height: 13px;
   margin: 30px 0;
   opacity: 1;
   outline: none;
-  width: 6px;
+  width: 13px;
 }
 @media only screen and (max-width: 992px) {
   .swiper-pagination-bullet {
@@ -2550,7 +2552,7 @@ iframe {
   }
 }
 .itemCard__title {
-  font-family: "Roboto", sans-serif;
+  font-family: font86463;
   font-weight: 500;
   margin-bottom: .8rem;
 }
@@ -3483,7 +3485,7 @@ iframe {
   -ms-flex-direction: column;
   flex-direction: column;
   justify-content: center;
-  font-family: "Roboto", sans-serif;
+  font-family: font86463;
   flex: 1;
   list-style: none;
   margin-bottom: 0;
@@ -4657,9 +4659,7 @@ li:nth-child(4) .menu-list__item span {
   margin-left: 5rem;
   padding:0px 10px 0px 10px;
 }
-.text-white{
 
-}
 
 
 /*# sourceMappingURL=style.css.map #f7541b */
